[package]
name = "pros-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]


[dependencies]
anyhow = { version = "1.0" }
snafu = { version = "0.7", features = ["backtraces"] }
wasmtime = { version = "9.0", features = ["async"] }
pros-simulator-macros = { path = "./macros" }
jsonl = { workspace = true }
pros-simulator-api = { path = "../simulator-api" }
